# voidsong-axum

./: .dockerignore  Cargo.toml  README.md  renovate.json
.github/: FUNDING.yml
.github/workflows/: publish-image.yml
docker/: Dockerfile
src/: env.rs  lib.rs  main.rs
src/handlers/: mod.rs  random_fact_handler.rs  random_handler.rs  random_humor_handler.rs  random_media_handler.rs  random_trivia_handler.rs
src/routes/: mod.rs  random_route.rs  root.rs
src/utils/: error.rs  mod.rs  response.rs  state.rs  url.rs
