# cargo-features = ["codegen-backend"]

[profile.dev]
# codegen-backend = "cranelift"
incremental = true
opt-level = 0
debug = true

[[bin]]
name = "voidsong"
path = "src/main.rs"

[package]
name = "voidsong"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["normalize-path", "trace"] }
tower-layer = "0.3.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
